0.0120    Thu Aug  6 14:21:56 IDT 2009
    * Removed some trailing characters after the "=cut" of several
    .pm files. It confused Pod::Xhtml.
    * Added resources and keywords to the Build.PL and META.yml.
    * Converted to Moose.
    * Bumped the version number to 0.0120 to indicate the Moosification.

0.0119    Wed May 13 23:50:28 IDT 2009
    * Made t/output.t work on perl-5.8.8 and below.

0.0118    Mon May  4 20:33:10 IDT 2009
    * Increased the test coverage.
    * Converted the use of the old and deprecated NEXT.pm to 
    MRO::Compat / mro.pm .

0.0117    Mon Aug 18 19:53:38 IDT 2008
    * Fixed t/sample-tests/skipall to generate the skip_all "rope" message
    that will be acceptable on recent versions of TAP::Parser.
    * Changed the name of the construction function from _initialize
    to _init.
    * Changed the interface of _register_obj_formatter() to
    accept a hash ref instead of ($name, $format).

0.0116    Fri Apr 11 20:20:50 IDT 2008
    * Wrote a fix to the test failures that Test-Run-0.0115 experienced on 
    BSD systems due to a test-script path over 256 bytes.
        - bug in the test script, not the code.
        - http://cpantesters.perl.org/show/Test-Run.html#Test-Run-0.0115
        - thanks to apeiron from Freenode for testing it on Darwin.

0.0115    Fri Apr  4 14:11:27 IDT 2008
    * Added the test file t/01unit-event-wrapper.t. (Fixed a bug when it
    was used in list context).
    * Test::Run::Straps::Base is now the base for Test::Run::Straps
    and Test::Run::Straps::StrapsTotalsObj
    * Fully converted Test::Run::Straps into BSDLed code.
    Test::Run::Straps_GplArt is now just a placeholder for old documentation.
    * Delegated more functionality into TAP::Parser (in ::Straps) while
    refactoring the code.
    * Added the Test.pl example under examples.
    * Added full POD Coverage.
    * Changed the license from "perl" to "mit" as all of the core code is
    now that.
    * A lot of refactoring.